# loopmux

./: .gitignore  Cargo.toml  FLEET_MANAGER_PLAN.md  FLEET_UX_ROADMAP.md  Makefile  PLAN.md  README.md  TUI_PLAN.md
docs/plan/: tui-roadmap.md
docs/specs/: config-first-migration.md  config-first-startup.md  trigger-expression-grammar.md
examples/: loopmux.example.yaml  loopmux.lean.yaml
release/: loopmux.rb  ship.sh  update_formula.sh
src/: main.rs
