
[package]
name = "loopmux"
version = "0.1.0"
edition = "2024"
description = "Loop prompts into tmux panes with triggers and delays."
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
