
[package]
name = "loopmux"
version = "0.1.9"
edition = "2024"
description = "Loop prompts into tmux panes with triggers and delays."
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
time = { version = "0.3", features = ["formatting", "local-offset"] }
